# neo4j_dm

./: .gitignore  README.md  pyproject.toml
src/neo4j_dm/: bn.py  core.py  gea.py  ig.py  queries.py  utils.py
tests/: credentials.py  goat_gene_list.csv  make_gene_set_from_collection.py  pd_dm_ncbigene.gmt  test.gmt  test_gea.py  test_render_ig.py  test_sbml.py  test_visualizing_nodes.py
