[project]
name = "neo4j_dm"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Adrien Rougny", email = "adrienrougny@gmail.com"},
]
dependencies = ["pygraphviz>=1.14"]
requires-python = ">=3.11, <=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "-e file:///${PROJECT_ROOT}/../momapy#egg=momapy",
    "-e file:///${PROJECT_ROOT}/../momapy_kb#egg=momapy-kb",
]
